--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "hackathon_1000devs_grupo01",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node backend/src/server.js",
+    "lint": "eslint . --ext .ts",
+    "lint-fix": "eslint . --ext .ts --fix"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,17 @@
   "bugs": {
     "url": "https://github.com/carolhn/Hackathon_1000Devs_grupo01/issues"
   },
-  "homepage": "https://github.com/carolhn/Hackathon_1000Devs_grupo01#readme"
+  "homepage": "https://github.com/carolhn/Hackathon_1000Devs_grupo01#readme",
+  "description": "",
+  "devDependencies": {
+    "@types/node": "^20.10.4",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
+    "eslint": "^8.55.0"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
+  }
 }
